--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<meta http-equiv="refresh" content="3;url=https://www.w3cschool.cn/" >
+<meta http-equiv="refresh" content="0;url=https://qun.qq.com/qqweb/qunpro/share?_wv=3&_wwv=128&inviteCode=2fZ0X0&from=246610&biz=ka" >
 </html>
