--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<meta http-equiv="refresh" content="0;url=https://pd.qq.com/s/flv5xxrp0" >
+<meta http-equiv="refresh" content="0;url=https://bbs.skycraft.cn/" >
 </html>
